--- a/app/server/static/index.html
+++ b/app/server/static/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Monitor your Linux server through a simple web dashboard. Open source and free!">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link href='//fonts.googleapis.com/css?family=Merriweather:300italic,300|Open+Sans:400,600' rel='stylesheet' type='text/css'>
+        <link href='/fonts-googleapis-com.css?family=Merriweather:300italic,300|Open+Sans:400,600' rel='stylesheet' type='text/css'>
         <link href='linuxDash.min.css' rel='stylesheet' type='text/css'>
 
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
